			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

04-Apr-2004
~~~~~~~~~~~
Added method of saving display settings for directories.  Mostly working,
but bugs remain related to size and position (Stephen Watson).
Updated Spanish translation (Marcelo Ramos).

03-Apr-2004
~~~~~~~~~~~
Load extended attribute functions dynamically. This should mean that compiling
ROX-Filer with a new glibc won't make it stop working with older versions due
to the functions being missing.

02-Apr-2004
~~~~~~~~~~~
Use * as a synonym for unfiltered (Stephen Watson).

25-Mar-2004
~~~~~~~~~~~
Bookmarks can be given titles (Stephen Watson).

24-Mar-2004
~~~~~~~~~~~
Fix memory leak in thumbnails code (Stephen Watson).

20-Mar-2004
~~~~~~~~~~~
Fixed bug in details mode for showing hidden files (Stephen Watson).

18-Mar-2004
~~~~~~~~~~~
Don't display an error box when installing the ROX icon theme. It just
worries people for no reason.

17-Mar-2004
~~~~~~~~~~~
Updated Chinese translation (Babyfai Cheung).

16-Mar-2004
~~~~~~~~~~~
Option to make the File menu appear directly when the menu is opened with
files selected (Peter Geer).

15-Mar-2004
~~~~~~~~~~~
Added an arrow to the comparison area of the action box so you can see
which file overwrites the other (Stephen Watson).

10-Mar-2004
~~~~~~~~~~~
Sort by user/group now uses the name, not the number (Stephen Watson).

07-Mar-2004
~~~~~~~~~~~
Added 'Select by Name'.

06-Mar-2004
~~~~~~~~~~~
Cope with XRandR screen resizing (Geoff Youngs and Tom Morton).

01-Mar-2004
~~~~~~~~~~~
Can now filter files by name, using normal shell (glob) patterns (Stephen 
Watson).

03-Feb-2004
~~~~~~~~~~~
Updated it.po and Manual-it (Yuri Bongiorno).

01-Feb-2004
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

24-Jan-2004 (Release 2.1.1)
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Updated Dutch translation (Jan Wagemakers).

22-Jan-2004
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

21-Jan-2004
~~~~~~~~~~~