@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+08-Apr-2004
+~~~~~~~~~~~
+Added Xinerama support (Tony Houghton).
+Set window type hint = toolbar for panel to prevent it appearing in pagers etc
+(Tony Houghton).
+
 04-Apr-2004
 ~~~~~~~~~~~
 Added method of saving display settings for directories.  Mostly working,
